# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
gendiff/: __init__.py  constants.py  diff_files.py  io.py  parsing.py  reading.py  style.py  tree.py
gendiff/formatter/: constants.py  json.py  plain.py  style.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py
tests/fixtures/: result_34_json(json).txt
